<resources>
    <string name="app_name">MealsMobileApp</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="server_unavailable">Error! Could not connect to server</string>
    <string name="retry">Retry</string>
    <string name="action_logout">Logout</string>
    <string name="username_or_password_empty">Username and password cannot be empty</string>
    <string name="action_login">Login</string>
    <string name="action_manage">Users</string>
    <string name="signup">Sign Up</string>
    <string name="wrong_credentials">Wrong credentials. Try again</string>
    <string name="username_taken">Username is taken</string>
    <string name="edit">Edit</string>
    <string name="retrieve_error">Could not retrieve the data</string>
    <string name="delete">Delete</string>
    <string name="delete_error">Could not delete the item</string>
    <string name="delete_success">Item deleted</string>
    <string name="add">Add</string>
    <string name="create_error">Could not create the item</string>
    <string name="create_success">Item created</string>
    <string name="meal_date">Date</string>
    <string name="meal_time">Time</string>
    <string name="meal_description">description</string>
    <string name="meal_calories">Calories</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="update_success">Item updated</string>
    <string name="update_error">Could not update the item</string>
    <string name="meal_filter_date_from">Date from</string>
    <string name="meal_filter_date_to">Date to</string>
    <string name="meal_filter_time_from">Time from</string>
    <string name="meal_filter_time_to">Time to</string>
    <string name="filter_meals">Filter</string>
    <string name="incorrect_filters">Incorrect filter values. Showing all</string>
    <string name="max_daily_calories">Daily calories limit</string>
    <string name="error_save_settings">Could not save settings</string>
    <string name="user_roles">Roles</string>
    <string name="role_admin">Administrator</string>
    <string name="role_manager">Manager</string>
    <string name="role_user">Standard user</string>
    <string name="unknown_user_role">Unknown user role</string>
    <string name="action_meals">Meals</string>
    <string name="not_secure_password">Password needs to be at least 3 characters long</string>

</resources>
